--- a/students/umienchuk_oksana/exams_first/src/css/style.scss
+++ b/students/umienchuk_oksana/exams_first/src/css/style.scss
@@ -4,6 +4,7 @@
 @import "./mixins";
 @import "./reset";
 @import "./global";
+@import "./btn";
 @import "./form-search/form-search";
 @import "./header/header";
 @import "./block-why/block-why";
