--- a/students/umienchuk_oksana/exams_first/src/css/_variables.scss
+++ b/students/umienchuk_oksana/exams_first/src/css/_variables.scss
@@ -7,6 +7,8 @@ $dark-grey: #333;
 $accent: #5373FD;
 $red: #FF6363;
 $blue: #00A2FF;
+$font-weight: 300;
+
 
 //main color for text 
 $default-body-color: $color-white;
@@ -16,16 +18,28 @@ $fallback: Arial, Helvetica, sans-serif;
 $default-font-name: Josefin Sans;
 $main-font: $default-font-name, $fallback;
 $default-font-size: 16px;
-
+$default-font-weight: $font-weight;
 
 $font-sub-font: Aleo;
 $default-font-sub-font: $font-sub-font, $fallback;
 $font-path: './fonts/';
 
+
+
+$font-size-small: 14px;
+$font-size-h5: 20px;
+$font-size-logo-sub: 22px;
+$font-size-h3: 24px;
+$font-size-h2: 36px;
+$font-size-h1: 48px;
+
+
+
 // $border-btn-color-primary: $orang-color;
 // $border-btn-color-secondary: $periwinkle-gray;
-// $border-height: 50px;
-// $btn-font-weight: 600;
+$btn-height: 60px;
+$btn-weight: 213px;
+$btn-font-weight: 400;
 
 // $border-color: $grey-light;
 // $default-border: 1px solid $grey-light;
@@ -43,6 +57,9 @@ $default-width: 1350px;
 $default-bg-color: $dark-grey;
 $icon-width: 64px;
 $icon-height: 64px;
+
+//content
+$background-bg-content: rgba(35, 35, 35, 0.9);
 
 $breack-points: (
     "lg": 1200px,
