--- a/students/motkaliuk_andrii/exam_andrii_motkaliuk/src/css/_variables.scss
+++ b/students/motkaliuk_andrii/exam_andrii_motkaliuk/src/css/_variables.scss
@@ -7,6 +7,7 @@ $color-dark-blue-accent: #486BFE;
 $color-blue: #00A2FF;
 $color-light-red: #FF6363;
 $color-light-gray: #999999;
+$color-gray-transparent: rgba(35, 35, 35, 0.90);
 
 $default-font-color: $color-darkgray;
 
