--- a/students/motkaliuk_andrii/exam_andrii_motkaliuk/src/css/main/_menu.scss
+++ b/students/motkaliuk_andrii/exam_andrii_motkaliuk/src/css/main/_menu.scss
@@ -21,19 +21,17 @@
 }
 
 .menu-wrapper {
-
-    &__item {}
+    &__item {
+        display: flex;
+        justify-content: space-evenly;
+    }
 }
 
 .menu {
-    display: flex;
-    justify-content: space-evenly;
     align-items: center;
     list-style: none;
 
     &__item {}
-
-
 
     &__link {
         color: $color-white;
@@ -51,7 +49,6 @@
         &:hover {
             border: 1px solid $color-white;
             border-radius: 15px;
-
         }
     }
 }
