--- a/students/motkaliuk_andrii/exam_andrii_motkaliuk/src/css/main/_steps.scss
+++ b/students/motkaliuk_andrii/exam_andrii_motkaliuk/src/css/main/_steps.scss
@@ -1,15 +1,12 @@
 .steps {
     background-color: $color-darkgray;
 
-
     &__wrapper {
         display: flex;
+        justify-content: space-between;
         width: 100%;
-        // padding-left: 300px;
-        // padding-right: 300px;
         max-height: 306px;
         height: 100%;
-        justify-content: space-between;
         padding: 60px 0;
 
         & .step-item:nth-child(1) {
@@ -33,8 +30,6 @@
 .row {}
 
 .step {
-
-
 
     &__step-item {
         position: relative;
@@ -64,26 +59,19 @@
 }
 
 .step-item {
-
-
     &__img {
         width: 64px;
         height: 64px;
     }
 
-
-
     &__description {
         color: $color-white;
         text-align: center;
-        font-family: Aleo;
+        font-family: $title-font;
         font-size: 36px;
         line-height: 40px;
-        /* 111.111% */
         text-transform: capitalize;
-        margin: 0;
         padding-top: 20px;
-
-
+        margin: 0;
     }
 }
