--- a/students/umienchuk_oksana/exams_first/src/css/review/_review.scss
+++ b/students/umienchuk_oksana/exams_first/src/css/review/_review.scss
@@ -1,12 +1,31 @@
 .reviews {
+    background-image: url(../../images/review-photo-bg.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    padding-top: 120px;
+    padding-bottom: 180px;
 
     // .reviews__title
 
-    &__title {}
+    &__title {
+        margin: 0 auto 60px auto;
+    }
 }
 
+.reviews-title {
+    font-family: $default-font-sub-font;
+    font-size: $font-size-h2;
+    font-weight: 400;
+    line-height: 40px;
+    text-transform: capitalize;
+}
 
 .reviews-wrap {
+    display: flex;
+    align-items: center;
+    flex-wrap: nowrap;
+    background-color: $dark-grey;
 
     // .reviews-wrap__img
 
@@ -14,19 +33,46 @@
 
     // .reviews-wrap__block
 
-    &__block {}
+    &__block {
+
+        padding: 48px 60px;
+    }
 
     // .reviews-wrap__title
 
-    &__title {}
+    &__title {
+        font-size: $font-size-h5;
+        font-weight: 400;
+        line-height: 28px;
+        text-transform: uppercase;
+        margin: 0 0 16px 0;
+    }
+
+    // .reviews-wrap__block-text
+
+    &__block-text {
+        position: relative;
+    }
 
     // .reviews-wrap__icon
 
-    &__icon {}
+    &__icon {
+        position: absolute;
+        top: -7px;
+    }
 
     // .reviews-wrap__text
 
-    &__text {}
+    &__text {
+        display: block;
+        text-indent: 2em;
+        line-height: 28px;
+        letter-spacing: 1.6px;
+        margin: 0;
+    }
 }
 
-.icon-img {}
+.icon-img-review {
+    height: 20px;
+    width: 20px;
+}
