add change in block content

--- a/students/umienchuk_oksana/exams_first/src/css/footer/_footer.scss
+++ b/students/umienchuk_oksana/exams_first/src/css/footer/_footer.scss
@@ -68,3 +68,11 @@
 .icon-white {
     fill: $color-white;
 }
+
+.content__right {
+    margin-left: 50%;
+}
+
+.content__left {
+    margin-right: 50%;
+}
