--- a/students/tiselko_iryna/exam_module1/src/css/main/_grandspain2.scss
+++ b/students/tiselko_iryna/exam_module1/src/css/main/_grandspain2.scss
@@ -10,5 +10,10 @@
 
     &__reverse {
         flex-direction: row-reverse;
+
+        @include media (xs) {
+            justify-content: center;
+            align-items: center;
+        }
     }
 }
