--- a/students/tiselko_iryna/exam_module1/src/css/_form.scss
+++ b/students/tiselko_iryna/exam_module1/src/css/_form.scss
@@ -11,7 +11,6 @@
     font-weight: $btn-font-weight;
     line-height: $btn-line-height;
     letter-spacing: $btn-letter-spacing;
-
     text-transform: uppercase;
     text-decoration: none;
 
@@ -23,6 +22,7 @@
 
     &-text-wrap {
         white-space: nowrap;
+        z-index: 10;
     }
 
     &-primary {
