--- a/students/tiselko_iryna/exam_module1/src/css/main/_search.scss
+++ b/students/tiselko_iryna/exam_module1/src/css/main/_search.scss
@@ -11,6 +11,10 @@
         margin-bottom: 59px;
         position: relative;
 
+        @include media (md) {
+            margin-top: 90px;
+        }
+
 
         &:not(:last-child)::after {
             content: '';
@@ -21,7 +25,16 @@
             border-radius: 50%;
             position: absolute;
             bottom: -50%;
-            left: 50%;
+            left: 48%;
+
+            @include media (lg) {
+                width: 400px;
+                height: 300px;
+            }
+
+            @media screen and (max-width: 1100px) {
+                display: none;
+            }
         }
     }
 
@@ -32,6 +45,11 @@
         padding-bottom: 20px;
         background-color: $dark-gray;
         z-index: 1;
+
+        @include media () {
+            width: 54px;
+            height: 54px;
+        }
 
         // .search-svg__search
         &__search {
@@ -54,6 +72,16 @@
 
     &__title {
         text-align: center;
+
+        @include media () {
+            font-size: 26px;
+            letter-spacing: 1.6px;
+        }
+
+        @include media (xxs) {
+            font-size: 16px;
+            line-height: 25.6px
+        }
     }
 
 }
