--- a/students/tiselko_iryna/exam_module1/src/css/main/_touristssay.scss
+++ b/students/tiselko_iryna/exam_module1/src/css/main/_touristssay.scss
@@ -39,9 +39,13 @@
 
     &__img {
         display: block;
-        aspect-ratio: 3/2;
+        aspect-ratio: 4/3;
         object-fit: cover;
         object-position: center;
+
+        @supports not (aspect-ratio: 3/2) {
+            height: 280px;
+        }
 
         @include media (md) {
             padding-top: 20px;
@@ -94,6 +98,7 @@
         @include media (xs) {
             font-size: 14px;
             letter-spacing: 0.6px;
+            padding-bottom: 20px;
         }
     }
 }
