what-say structure redone

--- a/students/motkaliuk_andrii/exam_andrii_motkaliuk/src/css/main/_why-choose.scss
+++ b/students/motkaliuk_andrii/exam_andrii_motkaliuk/src/css/main/_why-choose.scss
@@ -33,17 +33,43 @@
     &__button {}
 
     &__images-wrapper {
-        padding: 124px 0 124px 136px;
+        padding: 124px 0 124px 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+        align-items: flex-end;
+    }
+
+    &__image-container {
+        position: relative;
+        width: 350px;
+        height: 220px;
+        overflow: hidden;
+
+        &:first-child {
+            padding-right: 70px;
+
+            @include media(md) {
+                padding-right: 36px;
+            }
+        }
+
+        &:last-child {
+            padding-top: 16px;
+        }
     }
 
     &__img-top {
-        width: 350px;
-        height: 220px;
+        max-width: 100%;
+        max-height: 100%;
+        object-fit: cover;
+        display: block;
     }
 
     &__img-bottom {
-        width: 350px;
-        height: 220px;
-        padding: 10px 0 0 70px;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        display: block;
     }
 }
