--- a/students/motkaliuk_andrii/exam_andrii_motkaliuk/src/css/main/_what-say.scss
+++ b/students/motkaliuk_andrii/exam_andrii_motkaliuk/src/css/main/_what-say.scss
@@ -1,8 +1,17 @@
-$img-height: 280px;
+$text-wrapper-height: auto;
 
 .what-say {
     background-image: url(../../images/tourist-bg.png);
     background-size: cover;
+    padding-bottom: 180px;
+
+    & .col-4 {
+        padding-right: 0;
+    }
+
+    & .col-8 {
+        padding-left: 0;
+    }
 
     &__title {
         color: $color-white;
@@ -13,21 +22,27 @@ $img-height: 280px;
         line-height: 40px;
         text-transform: capitalize;
         margin: 0;
-        padding: 120px 0 60px;
+        padding-bottom: 60px;
+    }
+
+    .gtr {
+        display: flex;
+        align-items: stretch;
     }
 
     &__img {
-        position: absolute;
-        width: 440px;
-        height: $img-height;
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
     }
 
     &__wrapper {
         display: flex;
         flex-direction: column;
         position: relative;
-        height: $img-height;
-        margin-bottom: 180px;
+        height: auto;
+        padding: 48px 60px;
+        // margin-bottom: 180px;
     }
 }
 
@@ -35,18 +50,13 @@ $img-height: 280px;
     background-color: $color-darkgray;
     color: $color-white;
 
-    &__wrapper {
-        padding-left: 500px;
-
-    }
-
     &__title {
         font-size: 20px;
         font-weight: 400;
         line-height: 28px;
         text-transform: uppercase;
         margin: 0;
-        padding: 48px 0 16px;
+        padding-bottom: 16px;
     }
 
     &__img {
