--- a/students/umienchuk_oksana/exams_first/src/css/block-why/_block-why.scss
+++ b/students/umienchuk_oksana/exams_first/src/css/block-why/_block-why.scss
@@ -1,22 +1,54 @@
 .block-why {
-
+    background-image: url(../../images/content-0.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    padding: 124px 124px;
     // .block-why__title
 
-    &__title {}
+    &__title {
+        font-family: $default-font-sub-font;
+        font-size: $font-size-h2;
+        font-weight: 400;
+        line-height: 40px;
+        text-transform: capitalize;
+    }
 
     // .block-why__text
 
-    &__text {}
+    &__text {
+        line-height: 28px;
+        letter-spacing: 1.6px;
+        margin: 0 0 32px;
+    }
 
     // .block-why__images
 
-    &__images {}
+    &__images {
+        display: flex;
+        gap: 16px;
+        flex-direction: column;
+    }
 
     // .block-why__image
 
-    &__image {}
+    &__image-one {
+        align-self: flex-start;
+        width: 350px;
+        height: 220px;
+        flex-shrink: 0;
+    }
+
+    &__image-two {
+        align-self: flex-end;
+        width: 350px;
+        height: 220px;
+        flex-shrink: 0;
+    }
 }
 
-.btn {}
-
-.btn-primary {}
+.flex {
+    display: flex;
+    align-items: center;
+    flex-wrap: nowrap;
+}
