--- a/students/tiselko_iryna/exam_module1/src/css/header/_menu.scss
+++ b/students/tiselko_iryna/exam_module1/src/css/header/_menu.scss
@@ -18,6 +18,7 @@
 
     &__navblock {
         background-color: $dodger-blue;
+        position: relative;
     }
 }
 
@@ -27,21 +28,21 @@
 
     &__wrapper {
         display: flex;
+        justify-content: flex-end;
         position: relative;
-
-        @include media (md) {
-            justify-content: space-between;
-        }
     }
 
     // .navblock__menu-open-input
 
-    &__menu-open-input {}
+    &__menu-open-input {
+        @include visuality-hidden;
 
-    // .navblock__menu-open-label
-
-    &__menu-open-label {}
-
+        &:checked {
+            ~.navblock__menu {
+                transform: translateX(0);
+            }
+        }
+    }
 
     // .navblock__menu
 
@@ -51,7 +52,21 @@
         align-items: center;
         gap: 40px;
 
-        @include media (md) {}
+        @include media (md) {
+            position: absolute;
+            top: 105%;
+            right: -1%;
+            background-color: $dodger-blue;
+            z-index: 20;
+            justify-content: flex-start;
+            height: 100vh;
+            width: 75%;
+            display: flex;
+            flex-direction: column;
+            padding-top: 100px;
+            transform: translateX(150%);
+            transition: transform 0.3s ease-in-out;
+        }
     }
 }
 
@@ -63,6 +78,7 @@
         justify-content: center;
         align-items: center;
         border: 1px solid transparent;
+        z-index: 30;
 
         .navblock__menu-open-input:checked+& {
             .menu-open-label__span {
@@ -88,8 +104,6 @@
             height: 5px;
             transition: background-color .3s ease-in-out;
 
-
-
             &::before,
             &::after {
                 content: '';
@@ -114,10 +128,6 @@
 
 .menu {
 
-    // .menu__items
-
-    &__items {}
-
     // .menu__link
 
     &__link {
@@ -133,7 +143,7 @@
         padding: 10px;
 
         &:hover {
-            text-decoration: underline;
+            font-weight: 600;
         }
     }
 }
