--- a/students/tiselko_iryna/exam_module1/src/css/main/_search.scss
+++ b/students/tiselko_iryna/exam_module1/src/css/main/_search.scss
@@ -27,12 +27,17 @@
             bottom: -50%;
             left: 48%;
 
-            @include media (lg) {
+            @media screen and (max-width:1200px) and (min-width:1060px) {
                 width: 400px;
                 height: 300px;
             }
 
-            @media screen and (max-width: 1100px) {
+            @media screen and (max-width:1059px) and (min-width:993px) {
+                width: 350px;
+                height: 300px;
+            }
+
+            @include media (md) {
                 display: none;
             }
         }
@@ -42,7 +47,7 @@
     &-svg {
         width: 64px;
         height: 64px;
-        padding-bottom: 20px;
+        padding: 10px;
         background-color: $dark-gray;
         z-index: 1;
 
@@ -71,6 +76,7 @@
     // .search__title
 
     &__title {
+        padding-top: 10px;
         text-align: center;
 
         @include media () {
