update img links

--- a/students/tiselko_iryna/exam_module1/src/css/main/_grandspain1.scss
+++ b/students/tiselko_iryna/exam_module1/src/css/main/_grandspain1.scss
@@ -1,5 +1,5 @@
 .grandspain1 {
-    background-image: url(../../images/grandspain_1.png);
+    background-image: url(../../images/GrandSpain_1.png);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
