--- a/students/tiselko_iryna/exam_module1/src/css/main/_touristssay.scss
+++ b/students/tiselko_iryna/exam_module1/src/css/main/_touristssay.scss
@@ -1,5 +1,5 @@
 .touristssay {
-    background-image: url('../../images/touristsSay/touristssay_bg.png');
+    background-image: url(../../images/TouristsSay/TouristsSay_bg.png);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
