--- a/students/umienchuk_oksana/exams_first/src/css/_btn.scss
+++ b/students/umienchuk_oksana/exams_first/src/css/_btn.scss
@@ -1,30 +1,22 @@
 .btn {
     display: inline-block;
-    border: 1px solid transparent;
+    background-color: $color-btn;
+    color: $default-body-color;
     display: inline-flex;
     align-items: center;
-    font-size: 16px;
-    font-weight: $btn-font-weight;
     text-decoration: none;
-    white-space: nowrap;
-    background-color: $accent;
-    color: $color-white;
-    text-align: center;
-    justify-content: center;
-    font-family: $default-font-sub-font;
-    line-height: 20px;
-    letter-spacing: 1.12px;
-    text-transform: uppercase;
+
 
     &-primary {
-        height: $btn-height;
+        padding: 20px 32px;
+        height: $btn-height-primary;
         width: $btn-weight;
+        font-size: inherit;
     }
 
     &-secondary {
-        color: $color-white;
-        background-color: $accent;
-        height: $btn-height;
-        display: flex;
+        padding: 16px 24px;
+        height: $btn-height-secondary;
+        font-size: $font-size-small;
     }
 }
