--- a/students/umienchuk_oksana/exams_first/src/css/form-search/_form-search.scss
+++ b/students/umienchuk_oksana/exams_first/src/css/form-search/_form-search.scss
@@ -1,1 +1,50 @@
+.search-form {
 
+    // .search-form__wrapper
+
+    &__wrapper {}
+
+    // .search-form__input
+
+    &__input {}
+
+    // .search-form__button-container
+
+    &__button-container {}
+
+    // .search-form__icon-img
+
+    &__icon-img {
+        height: 16px;
+        width: 16px;
+        fill: white;
+    }
+
+    // .search-form__text
+    &__text {
+        font-family: $default-font-sub-font;
+        font-size: $font-size-small;
+        font-weight: 400;
+        line-height: 20px;
+        letter-spacing: 1.4px;
+        text-transform: uppercase;
+        margin: 0;
+    }
+
+    // .search-form__button
+    &__button {
+        display: flex;
+        align-items: center;
+        gap: 12px;
+        flex-shrink: 0;
+    }
+}
+
+.input-form {
+    background-color: $color-white;
+    padding: 20px 36px;
+}
+
+.btn {}
+
+.btn-primary {}
