--- a/students/umienchuk_oksana/exams_first/src/css/form-search/_form-search.scss
+++ b/students/umienchuk_oksana/exams_first/src/css/form-search/_form-search.scss
@@ -2,7 +2,16 @@
 
     // .search-form__wrapper
 
-    &__wrapper {}
+    &__wrapper {
+        margin: 0 auto;
+        display: flex;
+        flex-wrap: nowrap;
+        width: 647px;
+        align-items: center;
+        background-color: $color-white;
+        justify-content: space-between;
+        padding: 4px 5px 4px 36px;
+    }
 
     // .search-form__input
 
@@ -10,7 +19,9 @@
 
     // .search-form__button-container
 
-    &__button-container {}
+    &__button-container {
+        cursor: pointer;
+    }
 
     // .search-form__icon-img
 
@@ -22,12 +33,6 @@
 
     // .search-form__text
     &__text {
-        font-family: $default-font-sub-font;
-        font-size: $font-size-small;
-        font-weight: 400;
-        line-height: 20px;
-        letter-spacing: 1.4px;
-        text-transform: uppercase;
         margin: 0;
     }
 
@@ -37,14 +42,15 @@
         align-items: center;
         gap: 12px;
         flex-shrink: 0;
+        cursor: pointer
     }
 }
 
 .input-form {
     background-color: $color-white;
-    padding: 20px 36px;
+    color: $color-gray;
+    border: 0;
+    width: 100%;
+    padding: 0 10px 0 0;
+    @include fonts-type ($default-font-name, $font-size-small, $font-weight-name, $line-height, $letter-spacing-holder);
 }
-
-.btn {}
-
-.btn-primary {}
