add change for block why

--- a/students/umienchuk_oksana/exams_first/src/css/block-why/_block-why.scss
+++ b/students/umienchuk_oksana/exams_first/src/css/block-why/_block-why.scss
@@ -3,7 +3,7 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    padding: 124px 124px;
+    padding: 124px 0;
     // .block-why__title
 
     &__title {
@@ -51,4 +51,5 @@
     display: flex;
     align-items: center;
     flex-wrap: nowrap;
+    justify-content: space-between;
 }
