--- a/students/tiselko_iryna/exam_module1/src/css/_global.scss
+++ b/students/tiselko_iryna/exam_module1/src/css/_global.scss
@@ -6,6 +6,7 @@ body {
     line-height: $default-line-height;
     letter-spacing: $default-letter-spacing;
     color: $white-color;
+    overflow-x: hidden
 }
 
 h1 {
@@ -41,3 +42,5 @@ h4 {
 }
 
 @include grid();
+
+
