changes path for main pictures

--- a/students/umienchuk_oksana/exams_first/src/css/_variables.scss
+++ b/students/umienchuk_oksana/exams_first/src/css/_variables.scss
@@ -50,7 +50,7 @@ $default-font-weight: $font-weight;
 $font-sub-font: Aleo;
 $default-font-sub-font: $font-sub-font, $fallback;
 $font-path: './fonts/';
-
+$base-img-path: '../';
 
 
 // btn
