--- a/students/umienchuk_oksana/exams_first/src/css/block-why/_block-why.scss
+++ b/students/umienchuk_oksana/exams_first/src/css/block-why/_block-why.scss
@@ -1,5 +1,5 @@
 .block-why {
-    background-image: url(../../images/content-0.png);
+    background-image: url(#{$base-img-path}images/content-0.png);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
