--- a/students/umienchuk_oksana/exams_first/src/css/header/_header.scss
+++ b/students/umienchuk_oksana/exams_first/src/css/header/_header.scss
@@ -1,7 +1,7 @@
 .header {
     text-align: center;
     position: relative;
-    background-image: url(../../images/headerbackground.svg);
+    background-image: url(#{$base-img-path}images/headerbackground.svg);
     background-repeat: no-repeat;
     background-position: top;
     background-size: cover;
