add change for title header

--- a/students/umienchuk_oksana/exams_first/src/css/_variables.scss
+++ b/students/umienchuk_oksana/exams_first/src/css/_variables.scss
@@ -63,6 +63,7 @@ $btn-height-secondary: $btn-height-sec;
 $container-padding: 15px;
 $container-max-width: 1350px;
 
+$gap-cont: 15px;
 $gap: 15px;
 $defaulp-count-col: 12;
 
