--- a/students/umienchuk_oksana/exams_first/src/css/header/_header.scss
+++ b/students/umienchuk_oksana/exams_first/src/css/header/_header.scss
@@ -1,46 +1,49 @@
 .header {
-    text-align: center;
     position: relative;
     background-image: url(#{$base-img-path}images/headerbackground.svg);
     background-repeat: no-repeat;
     background-position: top;
     background-size: cover;
     background-attachment: fixed;
-    box-sizing: border-box;
-    // width: 100svw;
-    // height: 100svh;
-    padding-top: 295px;
-    padding-bottom: 214px;
+    height: 100vh;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    flex-direction: column;
+
+    //header__container-main
+    &__container-main {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        flex-grow: 1;
+    }
 
     // .header__menu
 
     &__menu {
         background-color: $accent;
+        box-sizing: border-box;
     }
-}
 
-.main-title {
-    text-align: center;
-    font-size: $font-size-h1;
-    font-weight: 700;
-    line-height: 52px;
-    text-transform: uppercase;
-    margin: 0 0 8px;
-}
+    &__main-title {
+        @include fonts-type($default-font-name, $font-size-h1, $font-weight-title, $line-height-title, normal, $text-transform-upper);
+        margin: 0 0 8px;
+    }
 
-.title-sub-text {
-    text-align: center;
-    font-size: $font-size-logo-sub;
-    font-weight: 400;
-    line-height: 28px;
-    letter-spacing: 6.82px;
+    &__title-sub-text {
+        @include fonts-type($default-font-name, $font-size-logo-sub, $font-weight-name, $line-height-text, $letter-spacing-sub-text, none);
+        margin: 0 0 48px;
+    }
 }
 
 .main-wrap {
     text-align: center;
+    position: absolute;
+    bottom: 17%;
+}
+
+.logo {
+    @include fonts-type($default-font-name, $font-size-h3, $font-weight-title, $line-height-text, $letter-spacing, $text-transform-upper);
 }
 
 .main {
@@ -62,10 +65,7 @@
 
 .scroll-down {
     text-align: center;
-    font-size: $font-size-small;
-    font-weight: 400;
-    line-height: 20px;
-    letter-spacing: 2.8px;
+    @include fonts-type($default-font-name, $font-size-small, $font-weight-name, $line-height, $letter-spacing-holder, none);
     color: $color-white;
     margin-bottom: 0;
 
@@ -76,21 +76,12 @@
 
 .icon-white {}
 
+
 .menu {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
 
     // .menu__logo
 
-    &__logo {
-        font-size: $font-size-h3;
-        font-weight: 700;
-        line-height: 28px;
-        letter-spacing: 2.4px;
-        text-transform: uppercase;
-    }
+    &__logo {}
 
     // .menu__logo-link
 
@@ -123,20 +114,10 @@
         text-decoration: none;
         color: $color-white;
 
-        font-family: $default-font-sub-font;
-        font-size: $font-size-small;
-        font-weight: 400;
-        line-height: 20px;
-        letter-spacing: 1.4px;
-        text-transform: uppercase;
+        @include fonts-type($font-sub-font, $font-size-small, $font-weight-name, $line-height, $letter-spacing-menu, $text-transform-upper);
 
         &:hover {
             text-decoration: underline;
         }
     }
-}
-
-.flex {
-    display: flex;
-    justify-content: space-around;
 }
