--- a/students/tiselko_iryna/exam_module1/src/css/header/_menu.scss
+++ b/students/tiselko_iryna/exam_module1/src/css/header/_menu.scss
@@ -4,6 +4,10 @@
     letter-spacing: 2.4px;
     text-transform: uppercase;
     color: $white-color;
+
+    @include media (xxs) {
+        font-size: 20px;
+    }
 }
 
 .header {
@@ -64,7 +68,7 @@
             display: flex;
             flex-direction: column;
             padding-top: 100px;
-            transform: translateX(150%);
+            transform: translateX(-180%);
             transition: transform 0.3s ease-in-out;
         }
     }
