--- a/students/tiselko_iryna/exam_module1/src/css/main/_main.scss
+++ b/students/tiselko_iryna/exam_module1/src/css/main/_main.scss
@@ -27,7 +27,7 @@
 
 .btn-primary {
     &::before {
-        content: url(../../images/svg/btn_rectangle.svg);
+        content: url(#{$base-img-pass}images/svg/btn_rectangle.svg);
         position: absolute;
         right: 105px;
         bottom: -6px;
