--- a/students/tiselko_iryna/exam_module1/src/css/main/_touristssay.scss
+++ b/students/tiselko_iryna/exam_module1/src/css/main/_touristssay.scss
@@ -1,5 +1,5 @@
 .touristssay {
-    background-image: url(../../images/TouristsSay/TouristsSay_bg.png);
+    background-image: url(#{$base-img-pass}images/TouristsSay/TouristsSay_bg.png);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -18,6 +18,7 @@
         @include media (xs) {
             font-size: 26px;
             letter-spacing: 1.6px;
+            margin-top: 80px;
         }
     }
 
@@ -33,13 +34,17 @@
             flex-direction: column;
             background-color: $dark-gray-opacity;
         }
+
+        @include media (xs) {
+            margin-bottom: 100px;
+        }
     }
 
     // .touristssay__img
 
     &__img {
         display: block;
-        aspect-ratio: 4/3;
+        aspect-ratio: 3/2;
         object-fit: cover;
         object-position: center;
 
@@ -48,21 +53,23 @@
         }
 
         @include media (md) {
-            padding-top: 20px;
+            padding-top: 35px;
             padding-bottom: 20px;
         }
 
         @include media (xxs) {
-            width: 300px;
+            width: 90%;
+            padding-top: 30px;
         }
     }
 
-    // .touristssay__wrapper
+    // .touristssay__wrapper-text
 
-    &__wrapper {
+    &__wrapper-text {
         padding-left: 60px;
 
         @include media (md) {
+            padding: 0;
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -72,11 +79,12 @@
 
     // .touristssay__subtitle
 
+    
     &__subtitle {
         padding-top: 48px;
 
-        @include media (md) {
-            padding-top: 20px;
+        @include media () {
+            padding-top: 30px;
         }
 
         @include media (xs) {
@@ -91,14 +99,14 @@
         padding: 16px 65px 48px 0;
         color: $white-color;
 
-        @include media (lg) {
-            padding-right: 40px;
+        @include media (md) {
+            padding-left: 60px;
         }
 
         @include media (xs) {
             font-size: 14px;
             letter-spacing: 0.6px;
-            padding-bottom: 20px;
+            padding: 15px 30px 35px 30px;
         }
     }
 }
