--- a/students/tiselko_iryna/exam_module1/src/css/main/_grandspain1.scss
+++ b/students/tiselko_iryna/exam_module1/src/css/main/_grandspain1.scss
@@ -1,5 +1,5 @@
 .grandspain1 {
-    background-image: url(../../images/GrandSpain_1.png);
+    background-image: url(#{$base-img-pass}images/GrandSpain_1.png);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -15,18 +15,15 @@
 
 .grandspain {
 
-    // .grandspain__item
-    &__item {
-        @include media (xs) {
-            justify-content: center;
-            align-items: center;
-        }
-    }
-
     // .grandspain__subtitile
 
     &__subtitile {
-        padding: 44px 560px 16px 32px;
+        padding: 44px 0 16px 32px;
+
+
+        @include media (xs) {
+            padding-left: 0;
+        }
     }
 
     // .grandspain__title
@@ -36,6 +33,8 @@
         padding-left: 32px;
 
         @include media (xs) {
+            padding-left: 0;
+            text-align: center;
             font-size: 18px;
             letter-spacing: 0.6px;
         }
@@ -47,11 +46,8 @@
         padding-left: 32px;
         padding-bottom: 24px;
 
-        @include media (md) {
-            padding-right: 32px;
-        }
-
         @include media (xs) {
+            padding-left: 25px;
             font-size: 14px;
             letter-spacing: 0.6px;
         }
@@ -61,18 +57,9 @@
 
     &__wrapper {
         background-color: $block-bg-color;
-        margin-top: 220px;
-        margin-bottom: 120px;
+        margin: 220px 15px 120px 15px;
 
-        @include media (md) {
-            margin: 200px 20px 120px 20px;
-        }
-
-        @include media (xs) {
-            width: 400px;
-        }
-
-        @include media(xxs) {
+        @include media(xs) {
             margin-top: 120px;
             display: flex;
             flex-direction: column;
@@ -80,9 +67,21 @@
         }
     }
 
+    // .grandspain__btn-wrapper
+
+    &__btn-wrapper {
+        @include media () {
+            display: flex;
+            flex-direction: row-reverse;
+        }
+
+        @include media (xxs) {
+            margin-bottom: 44px;
+        }
+    }
+
     //grandspain__btn 
     &__btn {
-        margin-bottom: 44px;
-        margin-left: 32px;
+        margin: 0 32px 44px 32px;
     }
 }
